# John-Conway-s-Game-of-Life-Simulations-OpenMP-based

./: CMakeLists.txt  README.md
codes/: lab2.cpp
